--- a/MotionLayoutPractice/app/src/main/AndroidManifest.xml
+++ b/MotionLayoutPractice/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MotionLayoutPractice">
+        <activity android:name=".MotionActivity"></activity>
+        <activity android:name=".Binding2Activity" />
+        <activity android:name=".DataBindingActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
