--- a/MotionLayoutPractice/app/build.gradle
+++ b/MotionLayoutPractice/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     kapt 'com.android.databinding:compiler:4.1.2'
 
