--- a/MotionLayoutPractice/app/src/main/AndroidManifest.xml
+++ b/MotionLayoutPractice/app/src/main/AndroidManifest.xml
@@ -9,7 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MotionLayoutPractice">
-        <activity android:name=".MotionActivity"></activity>
+        <activity
+            android:name=".CardActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MotionLayoutPractice.NoActionBar"/>
+        <activity
+            android:name=".ScrollingActivity"
+            android:exported="true"
+            android:label="@string/title_activity_scrolling"
+            android:theme="@style/Theme.MotionLayoutPractice.NoActionBar" />
+        <activity android:name=".MotionActivity" />
         <activity android:name=".Binding2Activity" />
         <activity android:name=".DataBindingActivity" />
         <activity android:name=".MainActivity">
